# Chatto-Client

./: CMakeLists.txt  CMakePresets.json
src/gui/: CMakeLists.txt  application.cpp  application.h  main.cpp  resource.qrc
src/gui/controller/: chat.cpp  chat.h  user.cpp  user.h
src/gui/ui/: DashboardPage.qml  LoginPage.qml  RegisterPage.qml  main.qml
src/gui/ui/arc/: Rect.qml  qmldir
src/gui/ui/import/arc/component/: chat_bubble.qml  chat_room.qml  contact.qml  nice_button.qml  qmldir  search_bar.qml
